# value-investing-heuristics

./: README.md  pyproject.toml  requirements.txt
src/value_investing_heuristics/: __init__.py  backtest.py  cdi.py  cli.py  config.py  data.py  ibrx100.py  indicators.py  mapping.py  metrics.py  optimizers.py  plotting.py  prices.py  reporting.py  screening.py
src/value_investing_heuristics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_backtest.py  test_indicators.py
